syntax = "proto3";
package api;

import "resource.proto";
import "resourcebinding.proto";

message Credential {
	string apiKey		= 1;
	string clientId 	= 2;
	string authUrl 		= 3; 
}

message ProviderRegistrationOpts {
    string namespace 	= 1;
	string providerType = 2;
	Credential cred		= 3;
}

message ProviderUpdateOpts {
    string     providerId   = 1;
    string     providerName = 2;
	Credential cred		    = 3;
}

message RegistrationStatus {
    bool error				= 1;
    string originalError 	= 2;
    string providerId 		= 3;
    string providerNamespace = 4;
}

message Provider {
	string id 			= 1;
	string namespace 	= 2;
	enum State {
		ENABLED 	= 0;
		DISABLED 	= 1;
		ERROR		= 2;
	}
	State state 		= 3;
	string providerType = 4;
	string resourcePathprefix = 5;
	repeated ResourceType resourceTypes = 6; 
}

service ResourceProvider {
	rpc RegisterProvider(ProviderRegistrationOpts) returns (RegistrationStatus) {}
	rpc DeRegisterProvider(ProviderRegistrationOpts) returns (RegistrationStatus) {}
	rpc UpdateProvider(ProviderUpdateOpts) returns (RegistrationStatus) {}
	rpc GetResourceTypes(ProviderOpts) returns (ResourceTypes) {}	
	rpc GetResource(GetResourceOpts) returns (Resource) {}
	rpc ListResource(GetResourceOpts) returns (Resources) {}
	rpc AssignResourceLink(ResourceBindingOpts) returns (ResourceBindings) {}
	rpc RemoveResourceLink(ResourceBindingOpts) returns (ResourceBindings) {}
}